# nix-hypervisor-tui

./: .gitignore  ALERTS.md  Cargo.toml  DESIGN.md  LICENSE  QUICKSTART.md  README.md  config.example.toml  flake.nix
nixos/: module.nix
src/: app.rs  config.rs  main.rs  metrics_history.rs
src/alerts/: manager.rs  mod.rs  rules.rs  types.rs
src/collectors/: kubernetes.rs  logs.rs  mod.rs  network.rs  system.rs
src/types/: mod.rs
src/ui/: alerts.rs  dashboard.rs  logs.rs  mod.rs  network.rs
