[package]
name = "hypervisor-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "NixOS Hypervisor Console TUI"
license = "MIT OR Apache-2.0"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Kubernetes
kube = { version = "0.88", features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

# System information
sysinfo = "0.30"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

# Utilities
futures = "0.3"
regex = "1"
once_cell = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
